@@ -8,7 +8,6 @@ Add option to delete the trust database to cli
 Add file database management to cli
 Think about config option to ask if events should go to syslog, too
 Consider exe & ftype as lists (Use AVL code for matching)
-Review pattern detection in light of EXEC_PERM events
 Does reversing path string improve lookup performance?
 Add file verification scrubber and update database status
 Use the verified status in decisions
