@@ -95,9 +95,6 @@ There are various ways that an attacker may try to execute code that may reveal 
 .B normal
 This matches against any ELF program that is dynamically linked.
 .TP
-.B bad_interpreter
-This matches against access patterns that indicate that the default ELF interpreter is not being used.
-.TP
 .B ld_so
 This matches against access patterns that indicate that the program is being started directly by the runtime linker.
 .TP
