@@ -28,9 +28,17 @@
 #include <sys/types.h>
 #include <stdint.h>
 
-typedef enum { STATE_COLLECTING=0, STATE_PARTIAL, STATE_FULL, STATE_NORMAL,
-	STATE_NOT_ELF, /*STATE_LD_PRELOAD,*/ STATE_BAD_INTERPRETER,
-	STATE_LD_SO, STATE_STATIC, STATE_BAD_ELF } state_t;
+typedef enum {	STATE_COLLECTING=0,	// initial state - execute
+		STATE_REOPEN,		// anticipating open perm next
+		STATE_PARTIAL,		// second path collected
+		STATE_STATIC_REOPEN,	// static app aniticipating
+		STATE_FULL,		// third path collected - decision time
+		STATE_NORMAL,		// normal pattern
+		STATE_NOT_ELF,		// not elf, ignore
+		STATE_LD_SO,		// app started by ld.so
+		STATE_STATIC,		// app is static
+		STATE_BAD_ELF		// app is elf but malformed
+} state_t;
 
 // This is used to determine what kind of elf file we are looking at.
 // HAS_LOAD but no HAS_DYNAMIC is staticly linked app. Normally you see both.
